--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
       <div *ngIf="userRole === 'Administrador'" class="space-y-6">
         <div class="bg-white overflow-hidden shadow-xl sm:rounded-lg p-6">
           <h2 class="text-2xl font-bold text-gray-800 mb-4">Panel de Administrador</h2>
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
             <div class="bg-blue-100 p-6 rounded-lg cursor-pointer hover:bg-blue-200 transition-colors" routerLink="/usuarios">
               <h3 class="text-lg font-semibold mb-2">Gestión de Usuarios</h3>
               <p class="text-gray-600">Administra los usuarios del sistema</p>
@@ -37,6 +37,10 @@
             <div class="bg-pink-100 p-6 rounded-lg cursor-pointer hover:bg-pink-200 transition-colors" routerLink="/pacientes">
               <h3 class="text-lg font-semibold mb-2">Gestión de Pacientes</h3>
               <p class="text-gray-600">Administra los pacientes y sus familiares</p>
+            </div>
+            <div class="bg-yellow-100 p-6 rounded-lg cursor-pointer hover:bg-yellow-200 transition-colors" routerLink="/citas">
+              <h3 class="text-lg font-semibold mb-2">Gestión de Citas</h3>
+              <p class="text-gray-600">Administra las citas de los pacientes</p>
             </div>
             <div class="bg-green-100 p-6 rounded-lg cursor-pointer hover:bg-green-200 transition-colors">
               <h3 class="text-lg font-semibold mb-2">Reportes</h3>
@@ -51,7 +55,7 @@
         <div class="bg-white overflow-hidden shadow-xl sm:rounded-lg p-6">
           <h2 class="text-2xl font-bold text-gray-800 mb-4">Panel Administrativo</h2>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <div class="bg-yellow-100 p-6 rounded-lg cursor-pointer hover:bg-yellow-200 transition-colors">
+            <div class="bg-yellow-100 p-6 rounded-lg cursor-pointer hover:bg-yellow-200 transition-colors" routerLink="/citas">
               <h3 class="text-lg font-semibold mb-2">Gestión de Citas</h3>
               <p class="text-gray-600">Administra las citas de los pacientes</p>
             </div>
@@ -68,7 +72,7 @@
         <div class="bg-white overflow-hidden shadow-xl sm:rounded-lg p-6">
           <h2 class="text-2xl font-bold text-gray-800 mb-4">Panel del Dentista</h2>
           <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-indigo-100 p-6 rounded-lg cursor-pointer hover:bg-indigo-200 transition-colors">
+            <div class="bg-indigo-100 p-6 rounded-lg cursor-pointer hover:bg-indigo-200 transition-colors" routerLink="/citas">
               <h3 class="text-lg font-semibold mb-2">Mis Citas</h3>
               <p class="text-gray-600">Visualiza y gestiona tus citas programadas</p>
             </div>
