--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -24,7 +24,7 @@
         <div>
           <label for="password" class="sr-only">Contraseña</label>
           <input
-            [(ngModel)]="loginData.contrasena"
+            [(ngModel)]="loginData.contraseña"
             name="password"
             type="password"
             required
