--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
               <h3 class="text-lg font-semibold mb-2">Gestión de Citas</h3>
               <p class="text-gray-600">Administra las citas de los pacientes</p>
             </div>
-            <div class="bg-yellow-100 p-6 rounded-lg cursor-pointer hover:bg-yellow-200 transition-colors" routerLink="/horarios">
+            <div class="bg-purple-100 p-6 rounded-lg cursor-pointer hover:bg-purple-200 transition-colors" routerLink="/horarios">
               <h3 class="text-lg font-semibold mb-2">Gestión de Horarios</h3>
               <p class="text-gray-600">Administra los Horarios de los Dentistas</p>
             </div>
