--- a/src/app/pages/teeth-chart/teeth-chart.component.html
+++ b/src/app/pages/teeth-chart/teeth-chart.component.html
@@ -1,7 +1,13 @@
 <div class="teeth-chart">
   <div class="teeth-row upper-front">
-    <div class="tooth" *ngFor="let n of upperTeeth" (click)="onToothClick(n)">
-      <img (click)="onToothClick(n); $event.stopPropagation()" [src]="toothImagesFrontView[n]" [alt]="'Tooth '+n" [width]="svgWidth('front')" [height]="svgHeight('front')" />
+    <div class="tooth" *ngFor="let n of upperTeeth" (click)="onToothClick(n)" [style.transform]="offsetTransform(n, 'front')">
+      <img *ngIf="getImageSrc(n,'front')"
+           (click)="onToothClick(n); $event.stopPropagation()"
+           [src]="getImageSrc(n,'front')"
+           [attr.data-origin]="getOrigin(n,'front')"
+           [alt]="'Tooth '+n"
+           [width]="svgWidth('front')"
+           [height]="svgHeight('front')" />
       <svg *ngIf="patientChart?.teeth?.[n]?.shapes?.front" [attr.width]="svgWidth('front')" [attr.height]="svgHeight('front')" class="overlay" (click)="onToothClick(n); $event.stopPropagation()">
         <path [attr.d]="patientChart?.teeth?.[n]?.shapes?.front" fill="rgba(255,0,0,0.3)" stroke="red" stroke-width="2" (click)="onToothClick(n); $event.stopPropagation()" />
       </svg>
@@ -9,8 +15,14 @@
   </div>
 
   <div class="teeth-row upper-top">
-    <div class="tooth" *ngFor="let n of upperTeeth" (click)="onToothClick(n)">
-      <img (click)="onToothClick(n); $event.stopPropagation()" [src]="toothImagesTopView[n]" [alt]="'Tooth '+n" [width]="svgWidth('top')" [height]="svgHeight('top')" />
+    <div class="tooth" *ngFor="let n of upperTeeth" (click)="onToothClick(n)" [style.transform]="offsetTransform(n, 'top')">
+      <img *ngIf="getImageSrc(n,'top')"
+           (click)="onToothClick(n); $event.stopPropagation()"
+           [src]="getImageSrc(n,'top')"
+           [attr.data-origin]="getOrigin(n,'top')"
+           [alt]="'Tooth '+n"
+           [width]="svgWidth('top')"
+           [height]="svgHeight('top')" />
       <svg *ngIf="patientChart?.teeth?.[n]?.shapes?.top" [attr.width]="svgWidth('top')" [attr.height]="svgHeight('top')" class="overlay" (click)="onToothClick(n); $event.stopPropagation()">
         <path [attr.d]="patientChart?.teeth?.[n]?.shapes?.top" fill="rgba(255,0,0,0.3)" stroke="red" stroke-width="2" (click)="onToothClick(n); $event.stopPropagation()" />
       </svg>
@@ -18,8 +30,14 @@
   </div>
 
   <div class="teeth-row lower-top">
-    <div class="tooth" *ngFor="let n of lowerTeeth" (click)="onToothClick(n)">
-      <img (click)="onToothClick(n); $event.stopPropagation()" [src]="toothImagesTopView[n]" [alt]="'Tooth '+n" [width]="svgWidth('top')" [height]="svgHeight('top')" />
+    <div class="tooth" *ngFor="let n of lowerTeeth" (click)="onToothClick(n)" [style.transform]="offsetTransform(n, 'top')">
+      <img *ngIf="getImageSrc(n,'top')"
+           (click)="onToothClick(n); $event.stopPropagation()"
+           [src]="getImageSrc(n,'top')"
+           [attr.data-origin]="getOrigin(n,'top')"
+           [alt]="'Tooth '+n"
+           [width]="svgWidth('top')"
+           [height]="svgHeight('top')" />
       <svg *ngIf="patientChart?.teeth?.[n]?.shapes?.top" [attr.width]="svgWidth('top')" [attr.height]="svgHeight('top')" class="overlay" (click)="onToothClick(n); $event.stopPropagation()">
         <path [attr.d]="patientChart?.teeth?.[n]?.shapes?.top" fill="rgba(255,0,0,0.3)" stroke="red" stroke-width="2" (click)="onToothClick(n); $event.stopPropagation()" />
       </svg>
@@ -27,8 +45,14 @@
   </div>
 
   <div class="teeth-row lower-front">
-    <div class="tooth" *ngFor="let n of lowerTeeth" (click)="onToothClick(n)">
-      <img (click)="onToothClick(n); $event.stopPropagation()" [src]="toothImagesFrontView[n]" [alt]="'Tooth '+n" [width]="svgWidth('front')" [height]="svgHeight('front')" />
+    <div class="tooth" *ngFor="let n of lowerTeeth" (click)="onToothClick(n)" [style.transform]="offsetTransform(n, 'front')">
+      <img *ngIf="getImageSrc(n,'front')"
+           (click)="onToothClick(n); $event.stopPropagation()"
+           [src]="getImageSrc(n,'front')"
+           [attr.data-origin]="getOrigin(n,'front')"
+           [alt]="'Tooth '+n"
+           [width]="svgWidth('front')"
+           [height]="svgHeight('front')" />
       <svg *ngIf="patientChart?.teeth?.[n]?.shapes?.front" [attr.width]="svgWidth('front')" [attr.height]="svgHeight('front')" class="overlay" (click)="onToothClick(n); $event.stopPropagation()">
         <path [attr.d]="patientChart?.teeth?.[n]?.shapes?.front" fill="rgba(255,0,0,0.3)" stroke="red" stroke-width="2" (click)="onToothClick(n); $event.stopPropagation()" />
       </svg>
