--- a/src/app/pages/tooth-editor/components/action-buttoms/action-buttons.component.html
+++ b/src/app/pages/tooth-editor/components/action-buttoms/action-buttons.component.html
@@ -1,5 +1,5 @@
 <div class="actions">
-  <button class="button monitor-action">MONITOR</button>
-  <button class="button treat-action">TREAT</button>
-  <button class="button save-action" (click)="save.emit()">SAVE</button>
+  <button class="button monitor-action">MONITOREAR</button>
+  <button class="button treat-action">TRATAR</button>
+  <button class="button save-action" (click)="save.emit()">GUARDAR</button>
 </div>
