--- a/src/app/pages/tooth-editor/components/pathology-details/pathology-details.component.html
+++ b/src/app/pages/tooth-editor/components/pathology-details/pathology-details.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngTemplateOutlet="renderLevel; context: { $implicit: hierarchy, depth: 0 }"></ng-container>
 </div>
 <ng-template #placeholder>
-  <p class="details-placeholder">Pathology Detail Placeholder</p>
+  <p class="details-placeholder">Selecciona una opción de patología</p>
 </ng-template>
 
 <ng-template #renderLevel let-level let-depth="depth">
