--- a/src/app/pages/tooth-editor/tooth-editor.component.html
+++ b/src/app/pages/tooth-editor/tooth-editor.component.html
@@ -4,7 +4,7 @@
     
     <div class="editor-content">
       <div class="left">
-        <h2 class="heading">Pathology - Tooth {{toothNumber}}</h2>
+        <h2 class="heading">Patología - Diente {{toothNumber}}</h2>
         <app-pathology-types></app-pathology-types>
         <app-pathology-details></app-pathology-details>
         <app-action-buttons (save)="save()"></app-action-buttons>
