--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="flex justify-end space-x-3">
+    <!-- <div class="flex justify-end space-x-3">
       <button type="button" (click)="resetForm()"
               class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
         Cancelar
@@ -39,7 +39,7 @@
               class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50">
         {{ editMode ? 'Actualizar' : 'Registrar' }}
       </button>
-    </div>
+    </div> -->
 
   <!-- Lista de Pacientes -->
   <div class="bg-white shadow-lg rounded-lg overflow-hidden">
