--- a/src/app/pages/teeth-chart/teeth-chart.component.css
+++ b/src/app/pages/teeth-chart/teeth-chart.component.css
@@ -77,6 +77,4 @@
 }
 
 /* La "tinta" no debe interceptar clics, solo colorear */
-.overlay-tint {
-  pointer-events: none;
-}
+.overlay-tint { pointer-events: none; width: 100%; height: 100%; }
